--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         </div>
       </section>
 
-			<!-- <section>
+			<section>
 				<div>
-					<img src="https://cloud.githubusercontent.com/assets/5812423/11205488/d7e2610a-8d10-11e5-94d3-f90f3d2b1250.png" />
+					<img src="https://cloud.githubusercontent.com/assets/125707/11622387/15e8c828-9cce-11e5-857c-ec71019cd0bc.png" />
 				</div>
-			</section> -->
+			</section>
 
 			<section>
         <div>
